# recall-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
.githooks/: pre-commit
.github/: dependabot.yml
backend/: Dockerfile  pyproject.toml  setup.py
backend/app/: config.py  db.py  main.py  models.py
backend/app/agent/: classifier.py  fallback_templates.py  offers.py  prompts.py  script_generator.py
backend/app/api/: agent.py  approval.py  delivery.py  events.py  media.py  metrics.py  public.py  tracking.py  video.py
backend/app/delivery/: adapters.py  crm_writeback.py  eligibility.py  email_adapter.py  landing_adapter.py  telegram_adapter.py
backend/app/runway/: client.py  credit_estimator.py  prompt_safety.py  schemas.py  task_store.py  tts.py  video_pipeline.py  visual_hints.py
backend/app/telegram/: bot.py
backend/app/workers/: scheduler.py
backend/seeds/: events.json  players.json  seed.py  sim_config.json
backend/tests/: conftest.py  test_agent_api.py  test_approval.py  test_classifier.py  test_config.py  test_credit_estimator.py  test_db.py  test_delivery.py  test_delivery_api.py  test_main.py  test_media.py  test_metrics.py  test_models.py  test_offers.py  test_pipeline.py  test_prompt_safety.py  test_public.py  test_runway_client.py  test_scheduler.py  test_script_generator.py  test_seed.py  test_task_store.py  test_telegram_bot.py  test_tracking.py  test_tts.py  test_video_api.py  test_video_pipeline.py
dashboard/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+68 files in other folders)
