[project]
name = "recall-backend"
version = "0.1.0"
description = "FastAPI backend for Recall AI CRM reactivation pipeline"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlmodel>=0.0.22",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "anthropic>=0.40",
  "runwayml>=3.0",
  "aiogram>=3.13",
  "apscheduler>=3.10",
  "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
packages = [
  "app",
  "app.agent",
  "app.api",
  "app.delivery",
  "app.runway",
  "app.telegram",
  "app.workers",
  "seeds",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
